--- a/statamic/_themes/main/templates/property.html
+++ b/statamic/_themes/main/templates/property.html
@@ -246,7 +246,7 @@
 				</div>
 				<div class="dotted" style="margin-top: 15px;"></div>
 					<div class="agent-internal">
-						<div class="agent property-agents">
+						<div class="property-agents agent mobile">
 							{{ relate:agents }}
 							<div class="agent-block">
 								<a class="agent-image" href="{{ url }}">
