--- a/statamic/_themes/main/templates/brokerloop.html
+++ b/statamic/_themes/main/templates/brokerloop.html
@@ -24,7 +24,7 @@
 	<zip>{{ zip_code }}</zip>
 	{{ endif }}
 
-	<listinglink>{{ _site_url }}{{ permalink }}}}</listinglink>
+	<listinglink>{{ permalink }}</listinglink>
 
 	<listingid>{{ id }}</listingid>
 	{{ if rooms|not_empty }}
@@ -120,7 +120,7 @@
 			<officename>Leslie J. Garfield</officename>
 			<phone>{{ phone }}</phone>
 			<email>{{ email }}</email>
-			<linstingurl>{{ _site_root }}{{ url }}</linstingurl>
+			<linstingurl>{{ permalink }}</linstingurl>
 		</agent>
 		{{ /relate:agents }}
 	</agents>
@@ -152,7 +152,7 @@
 	<zip>{{ zip_code }}</zip>
 	{{ endif }}
 
-	<listinglink>{{ _site_url }}{{ permalink }}}}</listinglink>
+	<listinglink>{{ permalink }}</listinglink>
 
 	<listingid>{{ id }}</listingid>
 	{{ if rooms|not_empty }}
@@ -248,7 +248,7 @@
 			<officename>Leslie J. Garfield</officename>
 			<phone>{{ phone }}</phone>
 			<email>{{ email }}</email>
-			<linstingurl>{{ _site_root }}{{ url }}</linstingurl>
+			<linstingurl>{{ permalink }}</linstingurl>
 		</agent>
 		{{ /relate:agents }}
 	</agents>
