--- a/statamic/_themes/main/templates/brokerloop.html
+++ b/statamic/_themes/main/templates/brokerloop.html
@@ -111,7 +111,7 @@
 	<images>
 		{{ if photo_carousel|not_empty }}
 		{{ photo_carousel }}
-		<image>{{ _site_url }}{{ value|urlencode }}</image>
+		<image>{{ _site_url }}{{ value|whitespace }}</image>
 		{{ /photo_carousel }}
 		{{ endif }}
 	</images>
@@ -239,7 +239,7 @@
 	<images>
 		{{ if photo_carousel|not_empty }}
 		{{ photo_carousel }}
-		<image>{{ _site_url }}{{ value }}</image>
+		<image>{{ _site_url }}{{ value|whitespace }}</image>
 		{{ /photo_carousel }}
 		{{ endif }}
 	</images>
