--- a/statamic/_themes/main/templates/blog.html
+++ b/statamic/_themes/main/templates/blog.html
@@ -16,7 +16,7 @@
 						{{ endif }}
 						<div class="entry">
 							<div class="preview-image-container">
-								<a href="{{ url }}" class="preview-image" style="background-image: url( {{ path src="{{ main_image }}" }} );"><div class="mask"></div></a>
+								<a href="{{ url }}" class="preview-image" style="background-image: url( '{{ path src="{{ main_image }}" }}' );"><div class="mask"></div></a>
 							</div>
 							<div class="preview">
 								<a href="{{ url }}"><div class="blog-title">{{ title }}</div></a>
