blog striptags on preview

--- a/statamic/_themes/main/templates/blog.html
+++ b/statamic/_themes/main/templates/blog.html
@@ -21,9 +21,9 @@
 							<div class="preview">
 								<a href="{{ url }}"><div class="blog-title">{{ title }}</div></a>
 								<div class="divider"></div>
-								{{ theme:partial src="blog_social" use_context="true" }}
+								
 								<div class="truncated">
-									{{ content|truncate:100|strip_tags }}
+									{{ content|truncate:200|striptags }}
 									<a class="read-more" href="{{ url }}">Read More</a>
 								</div>
 							</div>
