--- a/statamic/_themes/main/templates/blog.html
+++ b/statamic/_themes/main/templates/blog.html
@@ -16,14 +16,19 @@
 						{{ endif }}
 						<div class="entry">
 							<div class="preview-image-container">
-								<a href="{{ url }}" class="preview-image" style="background-image: url( '{{ path src="{{ main_image }}" }}' );"><div class="mask"></div></a>
+								<a href="{{ url }}" class="preview-image" style="background-image: url( {{ path src="{{ main_image }}" }} );"><div class="mask"></div></a>
 							</div>
 							<div class="preview">
 								<a href="{{ url }}"><div class="blog-title">{{ title }}</div></a>
 								<div class="divider"></div>
-								
+								<span class="date">Posted {{ date }} by </span>
+								{{ relate:author }}
+								<a class="author" href="{{ _site_root }}blog/authors/{{ title|lower }}">
+									{{ title }}
+								</a>
+								{{ /relate:author }}
 								<div class="truncated">
-									{{ content|truncate:200|striptags }}
+									{{ content|truncate:200 }}
 									<a class="read-more" href="{{ url }}">Read More</a>
 								</div>
 							</div>
