check streeteasy feed

--- a/statamic/_themes/main/templates/streeteasy.html
+++ b/statamic/_themes/main/templates/streeteasy.html
@@ -66,6 +66,9 @@
 		<description>
 		<![CDATA[
 			{{ summary_intro }}
+			{{ if summary_full }}
+			{{ summary_full }}
+			{{ endif }}
 		]]>
 		</description>
 		{{ endif }}
@@ -199,6 +202,9 @@
 		<description>
 		<![CDATA[
 			{{ summary_intro }}
+			{{ if summary_full }}
+			{{ summary_full }}
+			{{ endif }}
 		]]>
 		</description>
 		{{ endif }}
