added back logic to property page

--- a/statamic/_themes/main/templates/property.html
+++ b/statamic/_themes/main/templates/property.html
@@ -157,7 +157,7 @@
 							</div>
 							
 							<ul>
-							
+							{{ if amenities }}
 								{{ amenities }}
 								{{ if value =="washerDryer" }}
 								<li>Washer / Dryer</li>
@@ -165,12 +165,12 @@
 								<li>{{ value|ucfirst }}</li>
 								{{ endif }}
 								{{ /amenities }}
-								
-								
+							{{ endif }}	
+							{{ if key_features }}
 								{{ key_features }}
 								<li>{{ value }}</li>
 								{{ /key_features }}
-
+							{{ endif }}
 							</ul>
 						</div>
 					</div>
