--- a/statamic/_themes/main/templates/properties.html
+++ b/statamic/_themes/main/templates/properties.html
@@ -16,10 +16,10 @@
         "url":"{{ url }}",
         "streeteasy_status": "{{ streeteasy_status }}",
         "openhouse": "{{ openhouse }}",
-        "price": "{{ price }}",
+        "price": "{{ price|no_commas|whitespace }}",
         "currency": "{{ if currency|not_empty }}{{ currency }}{{ else }}${{endif }}",
         "property_type": "{{ property_type }}",
-        "sqft": "{{ sqft }}",
+        "sqft": "{{ sqft|no_commas }}",
         "property_location": "{{ property_location }}",
         "ownership": "{{ if ownership == "rental" }} /month{{ endif }}"
       },
@@ -34,10 +34,10 @@
         "url":"{{ url }}",
         "streeteasy_status": "{{ streeteasy_status }}",
         "openhouse": "{{ openhouse }}",
-        "price": "{{ price }}",
+        "price": "{{ price|no_commas|whitespace }}",
         "currency": "{{ if currency|not_empty }}{{ currency }}{{ else }}${{endif }}",
         "property_type": "{{ property_type }}",
-        "sqft": "{{ sqft }}",
+        "sqft": "{{ sqft|no_commas|whitespace }}",
         "results": "{{ total_results }}",
         "property_location": "{{ property_location }}",
         "ownership": "{{ if ownership == "rental" }} /month{{ endif }}"
@@ -57,10 +57,10 @@
         "url":"{{ url }}",
         "streeteasy_status": "{{ streeteasy_status }}",
         "openhouse": "{{ openhouse }}",
-        "price": "{{ price }}",
+        "price": "{{ price|no_commas|whitespace }}",
         "currency": "{{ if currency|not_empty }}{{ currency }}{{ else }}${{endif }}",
         "property_type": "{{ property_type }}",
-        "sqft": "{{ sqft }}",
+        "sqft": "{{ sqft|no_commas|whitespace }}",
         "results": "{{ total_results }}",
         "property_location": "{{ property_location }}",
         "ownership": "{{ if ownership == "rental" }} /month{{ endif }}"
@@ -76,10 +76,10 @@
         "url":"{{ url }}",
         "streeteasy_status": "{{ streeteasy_status }}",
         "openhouse": "{{ openhouse }}",
-        "price": "{{ price }}",
+        "price": "{{ price|no_commas|whitespace }}",
         "currency": "{{ if currency|not_empty }}{{ currency }}{{ else }}${{endif }}",
         "property_type": "{{ property_type }}",
-        "sqft": "{{ sqft }}",
+        "sqft": "{{ sqft|no_commas|whitespace }}",
         "results": "{{ total_results }}",
         "property_location": "{{ property_location }}",
         "ownership": "{{ if ownership == "rental" }} /month{{ endif }}"
