--- a/wwwroot/_themes/main/templates/property.html
+++ b/wwwroot/_themes/main/templates/property.html
@@ -98,33 +98,36 @@
 					<h2>{{ title }}{{if apartment }}, {{ apartment }}{{ endif }}</h2>
 
 				</div>
-	
-				{{ if openhouse == "true" or streeteasy_status !== "active" }}
+
 				<div class="open-house desktop">
-
-					{{ if openhouse == "true" }}
-						{{ openhouse_grid }}
-							 
-							{{ if first && date|is_today || date|in_future }}
-							
-								<span class="red red-span" id="first-o-h">Open <i class="fa fa-home"></i>: </span> <span class="red red-span">{{date format="l, F jS" }}: {{ startTime }} - {{ endTime }}</span>
-
-							{{ elseif last && date|is_today || date|in_future }}
-								<span class="oh-divider">|</span>
-								<div class="o-h-span display" id="second">
-									<span class="red red-span">Open <i class="fa fa-home"></i>: </span>
-								</div>
-								<span class="red red-span"> {{date format="l, F jS" }}: {{ startTime }} - {{ endTime }}</span>
-
-							{{ endif }}
-							
-						{{ /openhouse_grid }}
-					{{ elseif streeteasy_status != "active" }}
-						<span>{{ if streeteasy_status == "in-contract"}}In Contract{{ elseif streeteasy_status == "sold" }}Sold{{ endif }}</span>
-					{{ endif }}
-				</div>	
-				{{ endif }}
+				{{ if streeteasy_status !== "active" }}
+				<span>{{ if streeteasy_status == "in-contract"}}In Contract{{ elseif streeteasy_status == "sold" }}Sold{{ endif }}</span>
 				
+				
+				{{ else }}
+
+				{{ openhouse_grid }}
+					 
+					{{ if first && date|is_today || date|in_future }}
+					
+						<span class="red red-span" id="first-o-h">Open <i class="fa fa-home"></i>: </span> <span class="red red-span">{{date format="l, F jS" }}: {{ startTime }} - {{ endTime }}</span>
+					
+
+					{{ elseif last && date|is_today || date|in_future }}
+					>
+						<span class="oh-divider">|</span>
+						<div class="o-h-span display" id="second">
+							<span class="red red-span">Open <i class="fa fa-home"></i>: </span>
+						</div>
+						<span class="red red-span"> {{date format="l, F jS" }}: {{ startTime }} - {{ endTime }}</span>
+					
+					{{ endif }}
+					
+				{{ /openhouse_grid }}
+
+					
+				{{ endif }}
+				</div>
 
 				<div class="property-carousel">
 					{{ photo_carousel }}
