--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -91,6 +91,18 @@ a {
   }
 }
 
+.recaptcha-container {
+  text-align: center;
+}
+
+.g-recaptcha {
+  display: inline-block;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 15px;
+}
+
 .preview-image {
   background-size: cover;
 }
