--- a/wwwroot/_themes/main/partials/modal_listing.html
+++ b/wwwroot/_themes/main/partials/modal_listing.html
@@ -45,6 +45,9 @@
             value="{{ relate:agents}}{{ if first }}{{ email }}{{ endif }}{{/relate:agents}}">
           <input type="hidden" name="listing-address" value="{{ title }}">
         </div>
+        <div class="recaptcha-container">
+          <div class="g-recaptcha" data-sitekey="6LeI7x0TAAAAACJ6rKoA2ypk2qvZGz1DLZxoCAI1"></div>
+        </div>
           <div class="form centered">
             <input type="submit" value="SEND" class="submit btn-garfield">
           </div>
