--- a/wwwroot/_themes/main/partials/modal_valuation.html
+++ b/wwwroot/_themes/main/partials/modal_valuation.html
@@ -25,6 +25,9 @@
             <input type="text" name="website" class="website" />
           </div>
         </div>
+        <div class="recaptcha-container">
+          <div class="g-recaptcha" data-sitekey="6LeI7x0TAAAAACJ6rKoA2ypk2qvZGz1DLZxoCAI1"></div>
+        </div>
         <div class="submit">
           <input type="submit" value="SEND" class="btn-garfield">
         </div>
