--- a/wwwroot/_themes/main/partials/property_tile.html
+++ b/wwwroot/_themes/main/partials/property_tile.html
@@ -21,7 +21,7 @@
 				<span>
 				{{ endif }}
 				<div class="spacer"></div>
-				<span class="prop-location">{{ property_location }}{{ grid_check|foo }}</span>
+				<span class="prop-location">{{ property_location }}{{ grid_check }}</span>
 			</div>
 			<div class="bottom-info">
 
