--- a/wwwroot/_themes/main/templates/contact.html
+++ b/wwwroot/_themes/main/templates/contact.html
@@ -27,7 +27,11 @@
            <div class="form-full">
                <textarea value="" placeholder="Message" name="message"></textarea>
            </div>
+
            <div class="form-half">
+        <div class="recaptcha-container">
+          <div class="g-recaptcha" data-sitekey="6LeI7x0TAAAAACJ6rKoA2ypk2qvZGz1DLZxoCAI1"></div>
+        </div>
                <input type="submit" value="SEND" name="subscribe" class="btn-garfield">
            </div>
 
